Push to link to stackoverflow for question. Just a few, bugged, minor updates.

--- a/style.css
+++ b/style.css
@@ -1,35 +1,45 @@
-#main-title{
-  text-align: center;
+body{
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
 }
 
+h1, h3{
+  text-align: center;
+  margin-top: 0px;
+}
 
-
-/* Horizontal Navbar */
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
+  margin: 0px;
+  padding: 0px;
+  width: 10%;
+  background-color: #f1f1f1;
+  border-width: 0;
+  border-right: 1px;
+  border-style: solid;
+  height: 100%; /* Full height */
+  position: fixed; /* Make it stick, even on scroll */
+  overflow: auto; /* Enable scrolling if the sidenav has too much content */
 }
 
 li a {
   display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+  border-width: 0px;
+  border-bottom: 1px;
+  border-style: dashed;
+  color: #000;
+  padding: 8px 16px;
   text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
+/* Change the link color on hover */
 li a:hover {
-  background-color: #111;
+  background-color: #555;
+  color: white;
 }
 
-.active {
-  background-color: #23272A;
+/* Change the link color when selected */
+.active{
+  background-color: #5555;
 }
